# lsm9ds0

./: CHANGELOG.md  Cargo.toml  README.md
examples/rp2040/: Cargo.toml  README.md
examples/rp2040/.cargo/: config.toml
lsm9ds0/: Cargo.toml  README.md
lsm9ds0/src/: config.rs  errors.rs  interface.rs  lib.rs  registers.rs  tests.rs  types.rs
lsm9ds0/src/interface/: i2c.rs  spi.rs
